# fcitx-punc-ng

./: CMakeLists.txt
data/: CMakeLists.txt
src/: CMakeLists.txt  cfgrw.c  cfgrw.h  fcitx-punc-ng.conf.in  fcitx-punc-ng.fxaddon  fcitx-uk-punc.conf.in  punc-ng.c  punc.c
